# nucleus-3.0

./: .dockerignore  .gitignore  .replit  ABOSHAM_DOCS_INTEGRATION.md  AUTO_AUDIT_CHAIN_FINAL_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  COPY_PASTE_VALUES.md  CUSTOMER_SERVICE_INTEGRATION.md  DATA_FEDERATION_SYNC_PLAN.md  DEVELOPER_GUIDE_DOCS_INTEGRATION.md  Dockerfile  FEDERATION_HANDSHAKE_GUIDE.md  FEDERATION_SYSTEM.md  GET_NICHOLAS_URL.md  GITHUB-UNIFICATION-STRATEGY.md  HYBRID-MODE-README.md  IMPLEMENTATION_COMPLETE.md  LICENSE  NICHOLAS_CHAT_GUIDE.md  NICHOLAS_COMMANDS.md  NICHOLAS_ROADMAP.md  NUCLEUS-3.0-ARCHITECTURE.md  OUTBOUND_DISPATCHER_REPORT.md  PHASE_9.6_COMPLETION_REPORT.md  PHASE_9.8_COMPLETION_REPORT.md  PHASE_9_5_COMPLETION_REPORT.md  PHASE_9_7_1_COMPLETION_REPORT.md  PLATFORM_ANALYSIS.md  PLATFORM_CONNECTIONS_MAP.json  PRODUCTION-STATUS.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROFESSIONAL-UPGRADE-PLAN.md  PROJECT-OVERVIEW.md  README-UNIFIED.md  README.md  SCP_CAPABILITIES_SYSTEM.md  SCP_KeyKit_README.txt  SCP_MEMORY_STORAGE.md  (+53 more)
ai-bridge/: README.md  README_FINAL.md  RELEASE_SUMMARY.md  bridge.py  bridge_enhanced.py  bridge_fixed.py  bridge_metrics.py  deployment_guide.md  nginx-ai-bridge.conf  providers_config.json  routing_policies.yaml  start-bridge.sh  surooh-ai-bridge.service  surooh-metrics.service  test_bridge.py
client/: index.html  intelligence-dispatcher.ts  side-connector.ts
config/: side-node.json
docs/: API-GATEWAY.md  DEPLOYMENT-GUIDE.md  FEDERATION-API.md  NUCLEAR-ARCHITECTURE.md  NUCLEUS-CLIENT-SDK.md  (+20 more)
(+10646 files in other folders)
